<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_margin="@dimen/spacing_large"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:background="@drawable/editfield_gradient"
            android:hint="@string/username_hint"
            android:paddingTop="@dimen/padding_medium"
            app:boxBackgroundMode="none"
            app:boxCornerRadiusBottomEnd="@dimen/spacing_medium"
            app:boxCornerRadiusTopStart="@dimen/spacing_medium"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextAppearance="@style/TextAppearance_Subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            app:startIconContentDescription="@string/username"
            app:startIconDrawable="@drawable/ic_username_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingTop="-10dp"
                android:textSize="@dimen/text_size_email" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:background="@drawable/editfield_gradient"
            android:hint="@string/password_hint"
            android:paddingTop="@dimen/padding_medium"
            app:boxBackgroundMode="none"
            app:boxCornerRadiusBottomEnd="@dimen/spacing_medium"
            app:boxCornerRadiusTopStart="@dimen/spacing_medium"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:hintTextAppearance="@style/TextAppearance_Subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
            app:startIconContentDescription="@string/password"
            app:startIconDrawable="@drawable/ic_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tipassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="-10dp"
                android:textSize="@dimen/text_size_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:backgroundTint="@color/blue"
            android:elevation="@dimen/button_elevation"
            android:paddingStart="@dimen/standard_button_left_right"
            android:paddingTop="@dimen/standard_button_top_bottom"
            android:paddingEnd="@dimen/standard_button_left_right"
            android:paddingBottom="@dimen/standard_button_top_bottom"
            android:text="@string/login"
            android:textSize="20sp"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/product_image"
        android:layout_height="@dimen/product_image"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>